--- a/conda-bonjour/meta.yaml
+++ b/conda-bonjour/meta.yaml
@@ -35,10 +35,11 @@ test:
     - pip
 
 about:
+  home: https://github.com/BolunDai0216/conda-bonjour
   summary: Tutorial on publishing to Conda
   license: MIT
   license_file: LICENSE
 
 extra:
   recipe-maintainers:
-    - bolun
+    - BolunDai0216
