--- a/conda-bonjour/meta.yaml
+++ b/conda-bonjour/meta.yaml
@@ -1,30 +1,32 @@
-{% set name = "conda-bonjour" %}{% set version = "0.0.3" %}
-
+{% set name = "conda-bonjour" %}
+{% set version = "0.0.4" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://github.com/BolunDai0216/conda-bonjour/archive/v0.0.3.tar.gz
-  sha256: 8c18017f9a43d77bcc35165437546eac44d06d16af79bd2fc47c91f054bed98f
+  url: https://github.com/BolunDai0216/conda-bonjour/archive/v{{ version }}.tar.gz
+  sha256: 0079794c39d7c76c22bebc1e5eff95aa367dfcb7a25dd3666979dd3ead0172e5
 
 build:
-  noarch: python
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   number: 0
 
 requirements:
+  build:
+    - {{ compiler('c') }}
   host:
     - python >=3.8
     - setuptools >=61.0.0
     - pybind11 >=2.10.0
     - cmake
     - wheel
+    - ninja
     - pip
   run:
     - python >=3.8
-    - numpy >=1.26.4
+    - numpy >=1.22.0
 
 test:
   imports:
@@ -35,7 +37,6 @@ test:
     - pip
 
 about:
-  home: https://github.com/BolunDai0216/conda-bonjour
   summary: Tutorial on publishing to Conda
   license: MIT
   license_file: LICENSE
